--- a/about/static/about/css/index.css
+++ b/about/static/about/css/index.css
@@ -23,6 +23,7 @@
 #pic_and_greeting img{
     width: 20em;
     box-shadow: 25px 25px 50px 0 white inset, -25px -25px 50px 0 white inset; 
+    border-radius: 50%;
 }
 
 #pic_and_greeting pre{
