--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -23,12 +23,17 @@
             {% if request.user.is_superuser %}
                 <a class="create-edit-button" href="{% url 'edit' post.pk post.slug %}"> Edit </a>
             {% endif %}
-            <p id="post-title">
-                {{ post.title }}
-            </p>
+            <div class="post-title-date">
+                <p id="post-title">
+                    {{ post.title }}
+                </p>
+                <p id="post-date">
+                    {{ post.date|get_date }}
+                </p>
+            </div>
             <div id="post-descripts">
                 <p id="post-update">
-                    {{ post.date|get_date }}
+                    Last update: {{ post.update|get_date }}
                 </p>
                 {% for tag in post.tags.all|sort_lower:"name" %}
                     <a class="post-tag" href="{% url 'tag' tag.name %}">
